--- a/src/sass/module/article/_article__inner.scss
+++ b/src/sass/module/article/_article__inner.scss
@@ -1,12 +1,29 @@
 @use "global" as *;
-.article {
+.article__inner {
   // size
   display: inline-block;
   max-width: rem(375);
   width: 100%;
   // decoration
   background-color: #111;
+  // space
+  padding-top: rem(0);
+  padding-right: rem(19);
+  padding-bottom: rem(0);
+  padding-left: rem(20);
+
   @include mq(md) {
+    // size
+    display: flex;
+    max-width: rem(1280);
+    width: 100%;
+    // space
+    padding-top: rem(0);
+    padding-right: rem(119);
+    padding-bottom: rem(0);
+    padding-left: rem(119);
+    // ajustment
+    margin: 0 auto;
   }
   @include mq(xl) {
   }
