--- a/src/sass/module/article/_article__text.scss
+++ b/src/sass/module/article/_article__text.scss
@@ -1,6 +1,11 @@
 @use "global" as *;
 .article__text {
   @include mq(md) {
+    // size
+    // decoration
+    overflow: hidden;
+    // space
+    padding-right: rem(48);
   }
   @include mq(xl) {
   }
