--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,46 @@ select::-ms-expand {
 .outside {
   text-align: center;
 }
+.article__btn {
+  max-width: 335px;
+  max-width: 20.9375rem;
+  width: 100%;
+  max-height: 50px;
+  max-height: 3.125rem;
+  height: 100%;
+}
+@media screen and (min-width: 768px) {
+  .article__btn {
+    max-width: 8.375rem;
+    width: 100%;
+    max-height: 1.875rem;
+    height: 100%;
+  }
+}
+.article__contents--inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 0px;
+  padding-top: 0rem;
+  padding-right: 0px;
+  padding-right: 0rem;
+  padding-bottom: 16px;
+  padding-bottom: 1rem;
+  padding-left: 0px;
+  padding-left: 0rem;
+}
+@media screen and (min-width: 768px) {
+  .article__contents--inner {
+    padding-top: 0rem;
+    padding-right: 0rem;
+    padding-bottom: 0rem;
+    padding-left: 0rem;
+  }
+}
 .article__date--inner {
   font-family: "Noto Sans JP", sans-serif;
   font-size: 16px;
@@ -183,8 +223,21 @@ select::-ms-expand {
   font-weight: 400;
   line-height: 1.4375;
   color: #fff;
+  padding-top: 0px;
+  padding-top: 0rem;
+  padding-right: 32px;
+  padding-right: 2rem;
+  padding-bottom: 0px;
+  padding-bottom: 0rem;
+  padding-left: 0px;
+  padding-left: 0rem;
 }
 .article__info--inner {
+  display: block;
+  width: 99px;
+  width: 6.1875rem;
+  height: 31px;
+  height: 1.9375rem;
   font-family: "Noto Sans JP", sans-serif;
   font-size: 14px;
   font-size: 0.875rem;
@@ -192,16 +245,51 @@ select::-ms-expand {
   line-height: 1.4285;
   color: #fff;
   border: 1px solid #fff;
+  overflow: hidden;
+  padding-top: 6px;
+  padding-top: 0.375rem;
+  padding-bottom: 5px;
+  padding-bottom: 0.3125rem;
 }
-.article {
+@media screen and (min-width: 768px) {
+  .article__info {
+    padding-right: 3.8125rem;
+  }
+}
+.article__inner {
   display: inline-block;
   max-width: 375px;
   max-width: 23.4375rem;
   width: 100%;
   background-color: #111;
+  padding-top: 0px;
+  padding-top: 0rem;
+  padding-right: 19px;
+  padding-right: 1.1875rem;
+  padding-bottom: 0px;
+  padding-bottom: 0rem;
+  padding-left: 20px;
+  padding-left: 1.25rem;
+}
+@media screen and (min-width: 768px) {
+  .article__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 80rem;
+    width: 100%;
+    padding-top: 0rem;
+    padding-right: 7.4375rem;
+    padding-bottom: 0rem;
+    padding-left: 7.4375rem;
+    margin: 0 auto;
+  }
 }
 .article__text--inner {
   display: inline-block;
+  max-width: 375px;
+  max-width: 23.4375rem;
+  width: 100%;
   font-family: "Noto Sans JP", sans-serif;
   font-size: 16px;
   font-size: 1rem;
@@ -209,8 +297,40 @@ select::-ms-expand {
   line-height: 1.4375;
   text-align: left;
   color: #fff;
+  padding-top: 0px;
+  padding-top: 0rem;
+  padding-right: 0px;
+  padding-right: 0rem;
+  padding-bottom: 28px;
+  padding-bottom: 1.75rem;
+  padding-left: 0px;
+  padding-left: 0rem;
+}
+@media screen and (min-width: 768px) {
+  .article__text--inner {
+    max-width: 35.75rem;
+    width: 100%;
+    height: 100%;
+    padding-top: 0rem;
+    padding-right: 0rem;
+    padding-bottom: 0rem;
+    padding-left: 0rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .article__text {
+    overflow: hidden;
+    padding-right: 3rem;
+  }
 }
 .btn {
+  display: block;
   font-family: "Noto Sans JP", sans-serif;
   font-size: 20px;
   font-size: 1.25rem;
@@ -219,6 +339,37 @@ select::-ms-expand {
   letter-spacing: 0.125rem;
   line-height: 1.45;
   color: #333;
-  border: 1px solid #fff;
+  border: 1px solid #333;
+  background-color: #fff;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+}
+.btn::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.btn:hover::after {
+  left: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.btn:hover span {
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 16px;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.4375;
+  position: relative;
+  z-index: 10;
+  color: #fff;
 }
 /*# sourceMappingURL=styles.css.map */
