--- a/src/sass/module/article/_article__date--inner.scss
+++ b/src/sass/module/article/_article__date--inner.scss
@@ -8,6 +8,11 @@
   line-height: 1.4375;
   // decoration
   color: #fff;
+  // space
+  padding-top: rem(0);
+  padding-right: rem(32);
+  padding-bottom: rem(0);
+  padding-left: rem(0);
   @include mq(md) {
   }
   @include mq(xl) {
