--- a/src/sass/module/article/_article__text--inner.scss
+++ b/src/sass/module/article/_article__text--inner.scss
@@ -2,6 +2,8 @@
 .article__text--inner {
   // size
   display: inline-block;
+  max-width: rem(375);
+  width: 100%;
   // font
   font-family: "Noto Sans JP", sans-serif;
   font-size: rem(16);
@@ -11,7 +13,25 @@
   // decoration
   text-align: left;
   color: #fff;
+  // space
+  padding-top: rem(0);
+  padding-right: rem(0);
+  padding-bottom: rem(28);
+  padding-left: rem(0);
+
   @include mq(md) {
+    // size
+    max-width: rem(572);
+    width: 100%;
+    height: 100%;
+    // space
+    padding-top: rem(0);
+    padding-right: rem(0);
+    padding-bottom: rem(0);
+    padding-left: rem(0);
+    // ajustment
+    display: flex;
+    align-items: center;
   }
   @include mq(xl) {
   }
