--- a/src/sass/module/btn/_btn.scss
+++ b/src/sass/module/btn/_btn.scss
@@ -1,5 +1,7 @@
 @use "global" as *;
 .btn {
+  // size
+  display: block;
   // font
   font-family: "Noto Sans JP", sans-serif;
   font-size: rem(20);
@@ -8,7 +10,61 @@
   line-height: 1.45;
   // decoration
   color: #333;
-  border: 1px solid #fff;
+  border: 1px solid #333;
+  background-color: #fff;
+  overflow: hidden;
+  // space
+  padding: 0;
+  // ajustment -> `.btn::after`
+  position: relative;
+  @include mq(md) {
+  }
+  @include mq(xl) {
+  }
+}
+
+.btn::after {
+  content: "";
+  // size
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  // ajustment -> `.btn`
+  position: absolute;
+  top: 0;
+  left: -100%;
+  // animation
+  transition: 0.3s;
+  @include mq(md) {
+  }
+  @include mq(xl) {
+  }
+}
+
+.btn:hover::after {
+  // ajustment
+  left: 0;
+  // animation
+  transition: 0.3s;
+  @include mq(md) {
+  }
+  @include mq(xl) {
+  }
+}
+
+.btn:hover span {
+  // font
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: rem(16);
+  font-weight: $normal500;
+  // letter-spacing: rem(1);
+  line-height: 1.4375;
+  // ajustment
+  position: relative;
+  z-index: 10;
+  // decoration
+  color: #fff;
   @include mq(md) {
   }
   @include mq(xl) {
