2022/4/17 完成！(同じ幅でもは収まってもでは収まらない場合があった。padding で調整した。)

--- a/src/sass/module/article/_article__text.scss
+++ b/src/sass/module/article/_article__text.scss
@@ -5,7 +5,8 @@
     // decoration
     overflow: hidden;
     // space
-    padding-right: rem(48);
+    // padding-right: rem(48); *safariで文字が収まらない為、-4してます。
+    padding-right: rem(44);
   }
   @include mq(xl) {
   }
