--- a/src/sass/module/article/_article__text--inner.scss
+++ b/src/sass/module/article/_article__text--inner.scss
@@ -21,7 +21,8 @@
 
   @include mq(md) {
     // size
-    max-width: rem(572);
+    // max-width: rem(572); *safariで文字が収まらない為、+4してます。
+    max-width: rem(576);
     width: 100%;
     height: 100%;
     // space
